sanic no uvloop on windows; added usjon and aiofiles pkgs too

--- a/recipes/sanic/meta.yaml
+++ b/recipes/sanic/meta.yaml
@@ -13,7 +13,9 @@ source:
 
 build:
   number: 0
-  script: python setup.py install --single-version-externally-managed --record record.txt
+  script: >
+    SANIC_NO_UVLOOP=true  # [win]
+    python setup.py install --single-version-externally-managed --record record.txt
   skip: True  # [py<35]
 
 requirements:
@@ -25,7 +27,7 @@ requirements:
     - python
     - httptools >=0.0.9
     - ujson >=1.35
-    - uvloop >=0.5.3
+    - uvloop >=0.5.3  # [now win]
     - websockets >=3.2
     - aiofiles >=0.3.0
 
