--- a/recipes/ujson/meta.yaml
+++ b/recipes/ujson/meta.yaml
@@ -31,6 +31,7 @@ test:
 about:
   home: https://github.com/esnme/ultrajson
   summary: "Ultra fast JSON decoder and encoder written in C with Python bindings"
+  license: BSD
   license_file: LICENSE.txt
 
 extra:
