Cleanup deps. Add license file.

--- a/recipes/pulp/meta.yaml
+++ b/recipes/pulp/meta.yaml
@@ -11,8 +11,8 @@ source:
 
 build:
   entry_points:
-    - pulptest=pulp:pulpTestAll
-    - pulpdoctest=pulp:pulpDoctest
+    - pulptest = pulp:pulpTestAll
+    - pulpdoctest = pulp:pulpDoctest
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
 
@@ -20,10 +20,9 @@ requirements:
   build:
     - python
     - setuptools
-    - pyparsing >=2.0.1
   run:
     - python
-    - pyparsing >=2.0.1
+    - pyparsing >=2.0.1, <3
 
 test:
   commands:
@@ -38,6 +37,7 @@ about:
     and call GLPK, COIN CLP/CBC, CPLEX, and GUROBI to solve linear problems.
   home: https://github.com/coin-or/pulp
   license: MIT
+  license_file: LICENSE
   doc_url: https://pythonhosted.org/PuLP/
   dev_url: https://github.com/coin-or/pulp
   license_family: MIT
