--- a/recipes/sanic/meta.yaml
+++ b/recipes/sanic/meta.yaml
@@ -27,7 +27,7 @@ requirements:
     - python
     - httptools >=0.0.9
     - ujson >=1.35
-    - uvloop >=0.5.3  # [now win]
+    - uvloop >=0.5.3  # [not win]
     - websockets >=3.2
     - aiofiles >=0.3.0
 
