--- a/recipes/aiofiles/meta.yaml
+++ b/recipes/aiofiles/meta.yaml
@@ -24,7 +24,7 @@ requirements:
   run:
     - python
     - asyncio  # [py<34]
-    - singledispatch  # [py<34] 
+    - singledispatch  # [py<34]
 
 test:
   imports:
@@ -34,7 +34,7 @@ about:
   home: https://github.com/Tinche/aiofiles
   summary: "File support for asyncio"
   license: Apache 2.0
-  license_file: LICENSE
+  # license_file: LICENSE
 
 extra:
   recipe-maintainers:
