--- a/recipes/aiopeewee/meta.yaml
+++ b/recipes/aiopeewee/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "aiopeewee" %}
 {% set version = "0.4.1" %}
-{% set sha256 = "" %}
+{% set sha256 = "03578a1ce28879f5e575c82fce8ead74a0e5ae0f7e2d2ac592f86207bf0be85e" %}
 
 package:
   name: {{ name|lower }}
