another attempt to correctly set env variable on win

--- a/recipes/sanic/meta.yaml
+++ b/recipes/sanic/meta.yaml
@@ -14,7 +14,7 @@ source:
 build:
   number: 0
   script: >
-    set SANIC_NO_UVLOOP=true  # [win]
+    set SANIC_NO_UVLOOP=true &&  # [win]
     python setup.py install --single-version-externally-managed --record record.txt
   skip: True  # [py<35]
 
