sanic build script as list, removed blank lines

--- a/recipes/sanic/meta.yaml
+++ b/recipes/sanic/meta.yaml
@@ -13,16 +13,15 @@ source:
 
 build:
   number: 0
-  script: >
-    set SANIC_NO_UVLOOP=true &&  # [win]
-    python setup.py install --single-version-externally-managed --record record.txt
+  script:
+    - set SANIC_NO_UVLOOP=true  # [win]
+    - python setup.py install --single-version-externally-managed --record record.txt
   skip: True  # [py<35]
 
 requirements:
   build:
     - python
     - setuptools
-
   run:
     - python
     - httptools >=0.0.9
