--- a/recipes/gdist/meta.yaml
+++ b/recipes/gdist/meta.yaml
@@ -1,11 +1,15 @@
+{% set name = 'gdist' %}
+{% set version = '1.0.4' %}
+
 package:
-  name: gdist
-  version: "1.0.3"
+  name: {{ name }}
+  version: {{ version }}
 
 source:
   md5: 98547eac8e7c0b5a7a600e12ae5c9c4c
-  fn: 'gdist-1.0.3.tar.gz'
-  url: https://pypi.io/packages/source/g/gdist/gdist-1.0.3.tar.gz
+  sha256: 466ae588a1277d5b085d8caff86721f7c1ede717431341afdb44e99c00926d46
+  fn: {{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/g/gdist/{{ name }}-{{ version }}.tar.gz
 
 build:
   number: 0
@@ -14,13 +18,14 @@ build:
 
 requirements:
   build:
+    - toolchain
     - python
     - setuptools
-    - numpy
+    - numpy 1.11.*
     - cython
   run:
     - python
-    - numpy
+    - numpy >=1.11
     - scipy
     - cython
 
@@ -29,9 +34,10 @@ test:
     - gdist
 
 about:
-  home: http://code.google.com/p/geodesic/
+  home: https://github.com/the-virtual-brain/tvb-geodesic
   license: GPL-3.0
   license_family: GPL
+  license_file: LICENSE
   summary: 'Compute geodesic distances'
   description: |
     The `gdist` module is a Cython interface to a C++ library |
@@ -39,7 +45,7 @@ about:
     geodesic distance which is the length of shortest line between two |
     vertices on a triangulated mesh in three dimensions, such that the line |
     lies on the surface.
-  doc_url: http://docs.thevirtualbrain.org/
+  doc_url: http://code.google.com/p/geodesic/
   dev_url: https://github.com/the-virtual-brain/tvb-geodesic
 
 extra:
