--- a/recipes/tvb-framework/meta.yaml
+++ b/recipes/tvb-framework/meta.yaml
@@ -1,11 +1,15 @@
+{% set name = 'tvb-framework' %}
+{% set version = '1.5.4' %}
+
 package:
-  name: tvb-framework
-  version: "1.5.4"
+  name: {{ name }}
+  version: {{ version }}
 
 source:
   md5: 393ab17c9a73188f88c95d4ba4b5cc3e
-  fn: 'tvb-framework-1.5.4.tar.gz'
-  url: https://pypi.io/packages/source/t/tvb-framework/tvb-framework-1.5.4.1.tar.gz
+  sha256:
+  fn: {{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/t/tvb-framework/{{ name }}-1.5.4.2.tar.gz
 
 build:
   number: 0
