--- a/recipes/tvb-data/meta.yaml
+++ b/recipes/tvb-data/meta.yaml
@@ -1,11 +1,15 @@
+{% set name = 'tvb-data' %}
+{% set version = '1.5.4' %}
+
 package:
-  name: tvb-data
-  version: "1.5.4"
+  name: {{ name }}
+  version: {{ version }}
 
 source:
   md5: 2b0518fc64a630146f93a8819be30b9a
-  fn: 'tvb-data-1.5.4.tar.gz'
-  url: https://pypi.io/packages/source/t/tvb-data/tvb-data-1.5.4.0.tar.gz
+  sha256:
+  fn: {{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/t/tvb-data/{{ name }}-1.5.4.1.tar.gz
 
 build:
   number: 0
