--- a/recipes/tvb-library/meta.yaml
+++ b/recipes/tvb-library/meta.yaml
@@ -1,11 +1,15 @@
+{% set name = 'tvb-library' %}
+{% set version = '1.5.4' %}
+
 package:
-  name: tvb-library
-  version: "1.5.4"
+  name: {{ name }}
+  version: {{ version }}
 
 source:
   md5: a59efa09a559f3eaf4fbc579919f566c
-  fn: 'tvb-library-1.5.4.tar.gz'
-  url: https://pypi.io/packages/source/t/tvb-library/tvb-library-1.5.4.0.tar.gz
+  sha256:
+  fn: {{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/t/tvb-library/{{ name }}-1.5.4.1.tar.gz
 
 build:
   number: 0
