delete some stray blank lines / comments

--- a/recipes/galario/meta.yaml
+++ b/recipes/galario/meta.yaml
@@ -14,7 +14,7 @@ source:
 
 build:
   number: 0
-  skip: True  # [win]
+  skip: true  # [win]
 
 requirements:
   build:
@@ -54,20 +54,16 @@ about:
   license_family: GPL
   license_file: LICENSE
   summary: 'Gpu Accelerated Library for Analysing Radio Interferometer Observations'
-
-  # The remaining entries in this section are optional, but recommended
   description: |
     galario is a library that exploits the computing power of modern graphic
     cards (GPUs) to accelerate the comparison of model predictions to radio
     interferometer observations. Namely, it speeds up the computation of the
     synthetic visibilities given a model image (or an axisymmetric brightness
     profile) and their comparison to the observations.
-
   doc_url: https://mtazzari.github.io/galario/
   dev_url: {{ github }}
 
 extra:
   recipe-maintainers:
-    # GitHub IDs
     - fredRos
     - mtazzari
