--- a/recipes/r-robust/meta.yaml
+++ b/recipes/r-robust/meta.yaml
@@ -37,7 +37,8 @@ requirements:
     - r-fit.models
     - r-lattice
     - r-robustbase
-    - r-rrcov{indent}libgcc  # [not win]
+    - r-rrcov
+    - libgcc  # [not win]
 
 test:
   commands:
