Add import test
[skip appveyor]

--- a/recipes/macfsevents/meta.yaml
+++ b/recipes/macfsevents/meta.yaml
@@ -24,6 +24,10 @@ requirements:
   run:
     - python
 
+test:
+  imports:
+    - fsevents
+
 about:
   home: https://github.com/malthe/macfsevents
   license: MIT
