Corrected platform selectors

--- a/recipes/doit/meta.yaml
+++ b/recipes/doit/meta.yaml
@@ -24,9 +24,9 @@ requirements:
     - setuptools
   run:
     - python
-    - cloudpickle  # All platforms
-    - macfsevents  # MacOS only
-    - pyinotify  # Linux only
+    - cloudpickle
+    - macfsevents  # [osx]
+    - pyinotify  # [linux]
 
 test:
   imports:
