--- a/recipes/jquery/meta.yaml
+++ b/recipes/jquery/meta.yaml
@@ -1,4 +1,4 @@
-{% set name = "jquery_static" %}
+{% set name = "jquery" %}
 {% set version = "3.2.1" %}
 {% set sha256 = "31d8c2e22dd48a7973fe3617cc656fe6b64d2250d07a258cd8ab30ead031c24a" %}
 
