Restrict to Python3
Current versions of DoIt only support Python 3.

--- a/recipes/doit/meta.yaml
+++ b/recipes/doit/meta.yaml
@@ -20,10 +20,10 @@ build:
 
 requirements:
   build:
-    - python
+    - python >=3
     - setuptools
   run:
-    - python
+    - python >=3
     - cloudpickle
     - macfsevents  # [osx]
     - pyinotify  # [linux]
