--- a/recipes/gulp/meta.yaml
+++ b/recipes/gulp/meta.yaml
@@ -13,10 +13,10 @@ source:
 
 build:
   number: 0
-  noarch: True
+  noarch: generic
   script: 
-    - npm install gulp
-    - npm link gulp
+    - npm install -g gulp
+ 
 requirements:
   build:
     - nodejs
@@ -25,8 +25,7 @@ requirements:
        
 test:
   commands:
-    - gulp -h
-    - gulp -v
+    - npm list -g gulp
 
 about:
   home: https://github.com/gulpjs/gulp
