--- a/recipes/gulp/meta.yaml
+++ b/recipes/gulp/meta.yaml
@@ -8,7 +8,7 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://github.com/gulpjs/gulp/archive/v3.9.1.tar.gz
+  url: https://github.com/gulpjs/{{ name }}/archive/v{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
