Restrict to Py3 via build-skip

--- a/recipes/doit/meta.yaml
+++ b/recipes/doit/meta.yaml
@@ -14,16 +14,17 @@ source:
 
 build:
   number: 0
+  skip: True  # [py2k]
   entry_points:
     - doit = doit.__main__:main
   script: python setup.py install  --single-version-externally-managed --record=record.txt
 
 requirements:
   build:
-    - python >=3
+    - python
     - setuptools
   run:
-    - python >=3
+    - python
     - cloudpickle
     - macfsevents  # [osx]
     - pyinotify  # [linux]
