--- a/recipes/material-design-lite/meta.yaml
+++ b/recipes/material-design-lite/meta.yaml
@@ -17,13 +17,14 @@ build:
 
 requirements:
   build:
-    - python
+    - nodejs
   run:
-    - python
     
 test:
   commands:
     - npm list -g material-design-lite
+  requires:
+    - nodejs
 
 about:
   home: https://github.com/google/material-design-lite
