--- a/recipes/d3/meta.yaml
+++ b/recipes/d3/meta.yaml
@@ -19,10 +19,12 @@ requirements:
   build:
     - nodejs
   run:
-    - nodejs
+    
 test:
   commands:
     - npm list -g d3
+  requires:
+    - nodejs
    
 
 about:
