--- a/recipes/sanic/meta.yaml
+++ b/recipes/sanic/meta.yaml
@@ -13,10 +13,8 @@ source:
 
 build:
   number: 0
-  script:
-    - set SANIC_NO_UVLOOP=true  # [win]
-    - python setup.py install --single-version-externally-managed --record record.txt
-  skip: True  # [py<35]
+  script: python setup.py install --single-version-externally-managed --record record.txt
+  skip: True  # [py<35 or win]
 
 requirements:
   build:
