added license to aiopeewee

--- a/recipes/aiopeewee/meta.yaml
+++ b/recipes/aiopeewee/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "aiopeewee" %}
-{% set version = "0.4.1" %}
-{% set sha256 = "03578a1ce28879f5e575c82fce8ead74a0e5ae0f7e2d2ac592f86207bf0be85e" %}
+{% set version = "0.4.2" %}
+{% set sha256 = "be9c5f574dd353b1869fa61982840c753c50ffc0538b6a9f3625bb4990e46fa8" %}
 
 package:
   name: {{ name|lower }}
@@ -35,6 +35,7 @@ about:
   home: https://github.com/kszucs/aiopeewee
   summary: "Asyncio interface for Peewee ORM"
   license: MIT
+  license_file: LICENSE
 
 extra:
   recipe-maintainers:
