--- a/recipes/googlemaps/meta.yaml
+++ b/recipes/googlemaps/meta.yaml
@@ -23,6 +23,8 @@ requirements:
   run:
     - python
     - requests >=2.11.1,<3.0
+    - urllib3 >=1.21.1,<1.23
+    - chardet >=3.0.2,<3.1.0
 
 test:
   imports:
