--- a/recipes/googlemaps/meta.yaml
+++ b/recipes/googlemaps/meta.yaml
@@ -21,6 +21,8 @@ requirements:
     - python
     - setuptools
     - tox
+    - urllib3 >=1.21.1,<1.23
+    - chardet >=3.0.2,<3.1.0
   run:
     - python
     - requests >=2.11.1,<3.0
