--- a/recipes/cspice/meta.yaml
+++ b/recipes/cspice/meta.yaml
@@ -35,6 +35,12 @@ requirements:
 test:
   # Some package might need a `test/commands` key to check CLI.
   # List all the packages/modules that `run_test.py` imports.
+  files:
+    - test_cspice.c
+
+  commands:
+    - "cc test_cspice.c -I$PREFIX/include -L$PREFIX/lib -lcspice -o test_cspice" [not win]
+    - "LD_LIBRARY_PATH=$PREFIX/lib ./test_cspice"  [not win]
 
 about:
   home: https://naif.jpl.nasa.gov/naif/toolkit.html
