--- a/recipes/cspice/meta.yaml
+++ b/recipes/cspice/meta.yaml
@@ -39,19 +39,20 @@ test:
     - test_cspice.c
 
   commands:
-    - "cc test_cspice.c -I$PREFIX/include -L$PREFIX/lib -lcspice -o test_cspice" [not win]
-    - "LD_LIBRARY_PATH=$PREFIX/lib ./test_cspice"  [not win]
+    - "cc test_cspice.c -I$PREFIX/include -L$PREFIX/lib -lcspice -o test_cspice"  # [not win]
+    - "LD_LIBRARY_PATH=$PREFIX/lib ./test_cspice"  # [not win]
 
 about:
   home: https://naif.jpl.nasa.gov/naif/toolkit.html
   license: Public Domain
   summary: 'NASA ancillary information system'
 
-  description: |
-    SPICE is an ancillary information system that provides scientists and
-    engineers the capability to include space geometry and event data into
-    mission design, science observation planning, and science data analysis
-    software.
+  description:
+    - |
+      SPICE is an ancillary information system that provides scientists and
+      engineers the capability to include space geometry and event data into
+      mission design, science observation planning, and science data analysis
+      software.
   doc_url: https://naif.jpl.nasa.gov/pub/naif/toolkit_docs/C/index.html
 
 extra:
