[skip ci] [ci skip] bsd-3-clause

--- a/recipes/pyld/meta.yaml
+++ b/recipes/pyld/meta.yaml
@@ -29,7 +29,7 @@ test:
     
 about:
   home: https://pypi.python.org/pypi/PyLD/{{ version }}
-  license: BSD
+  license: BSD-3-Clause
   summary: 'Python implementation of the JSON-LD API'
   license_family: BSD
   license_file: LICENSE
