Add command tests

--- a/recipes/macholib/meta.yaml
+++ b/recipes/macholib/meta.yaml
@@ -27,6 +27,8 @@ requirements:
 test:
   imports:
     - macholib
+  commands:
+    - python -m macholib find /tmp/
 
 about:
   home: http://bitbucket.org/ronaldoussoren/macholib
