--- a/recipes/datatables/meta.yaml
+++ b/recipes/datatables/meta.yaml
@@ -21,7 +21,9 @@ requirements:
   
 test:
   commands:
-  - npm list -g datatables
+    - npm list -g datatables
+  requires:
+    - nodejs
    
 
 about:
