added nodejs as a test requirement

--- a/recipes/flot/meta.yaml
+++ b/recipes/flot/meta.yaml
@@ -18,12 +18,12 @@ build:
 requirements:
   build:
     - nodejs
-  run:
-    - nodejs
     
 test:
   commands:
     - npm list -g Flot
+  requires:
+    - nodejs
    
 
 about:
