added one more test command

--- a/recipes/gulp/meta.yaml
+++ b/recipes/gulp/meta.yaml
@@ -26,6 +26,7 @@ requirements:
 test:
   commands:
     - npm list -g gulp
+    - npm link gulp && gulp --help
 
 about:
   home: https://github.com/gulpjs/gulp
