Fix compiler requirements on Windows

--- a/recipes/cspice/meta.yaml
+++ b/recipes/cspice/meta.yaml
@@ -24,13 +24,17 @@ source:
 
 build:
   number: 0
+  features:
+    - vc9               [win and py27]
+    - vc10              [win and py34]
+    - vc14              [win and py35]
 
 requirements:
   build:
-    - gcc
-    - libgcc
+    - gcc [not win]
+    - libgcc [not win]
   run:
-    - libgcc
+    - libgcc [not win]
 
 test:
   # Some package might need a `test/commands` key to check CLI.
