--- a/recipes/cspice/meta.yaml
+++ b/recipes/cspice/meta.yaml
@@ -25,17 +25,25 @@ source:
 build:
   number: 0
   features:
-    - vc9   # [win and py27]
-    - vc10  # [win and py34]
-    - vc14  # [win and py35]
-    - vc14  # [win and py36]
+    - vc9    # [win and py27]
+    - vc10   # [win and py34]
+    - vc14   # [win and py35]
+    - vc14   # [win and py36]
 
 requirements:
   build:
-    - gcc [not win]
-    - libgcc [not win]
+    - gcc    # [not win]
+    - libgcc # [not win]
+    - vc 9   # [win and py27]
+    - vc 10  # [win and py34]
+    - vc 14  # [win and py35]
+    - vc 14  # [win and py36]
   run:
-    - libgcc [not win]
+    - libgcc # [not win]
+    - vc 9   # [win and py27]
+    - vc 10  # [win and py34]
+    - vc 14  # [win and py35]
+    - vc 14  # [win and py36]
 
 test:
   # Some package might need a `test/commands` key to check CLI.
