adding rrequests as build dependency

--- a/recipes/googlemaps/meta.yaml
+++ b/recipes/googlemaps/meta.yaml
@@ -12,36 +12,31 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  noarch: python
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
   build:
     - python
+    - requests
     - setuptools
-    - tox
-    - urllib3 >=1.21.1,<1.23
-    - chardet >=3.0.2,<3.1.0
   run:
     - python
-    - requests >=2.11.1,<3.0
-    - urllib3 >=1.21.1,<1.23
-    - chardet >=3.0.2,<3.1.0
+    - requests
 
 test:
   imports:
     - googlemaps
 
 about:
-  home: https://github.com/googlemaps/google-maps-services-python
+  home: http://github.com/simplejson/simplejson
   license: Apache 2
   license_family: Apache
   summary: 'Python Client for Google Maps Services'
 
+  
   description: |
     Use Python? Want to geocode something? Looking for directions? Maybe matrices of directions? This library brings the Google Maps API Web Services to your Python application. Analytics
-
   doc_url: https://github.com/googlemaps/google-maps-services-python
   dev_url: https://github.com/googlemaps/google-maps-services-python
 
