add requests version

--- a/recipes/googlemaps/meta.yaml
+++ b/recipes/googlemaps/meta.yaml
@@ -19,11 +19,11 @@ build:
 requirements:
   build:
     - python
-    - requests
+    - requests >=2.11.1,<3.0
     - setuptools
   run:
     - python
-    - requests
+    - requests >=2.11.1,<3.0
 
 test:
   imports:
