--- a/recipes/imbalanced-learn/meta.yaml
+++ b/recipes/imbalanced-learn/meta.yaml
@@ -20,15 +20,13 @@ requirements:
   build:
     - python
     - setuptools
-    - numpy 1.9.*  # [not (win and py36)]
-    - numpy 1.11.*  # [win and py36]
+    - numpy >=1.9
     - scipy
     - scikit-learn 0.19.*
 
   run:
     - python
-    - numpy >=1.9  # [not (win and py36)]
-    - numpy >=1.11  # [win and py36]
+    - numpy >=1.9
     - scipy
     - scikit-learn 0.19.*
 
