Link towards the recent new Pypi packages 1.5.5

--- a/recipes/tvb-data/meta.yaml
+++ b/recipes/tvb-data/meta.yaml
@@ -1,15 +1,15 @@
 {% set name = 'tvb-data' %}
-{% set version = '1.5.4' %}
+{% set version = '1.5.5' %}
 
 package:
   name: {{ name }}
   version: {{ version }}
 
 source:
-  md5: 2b0518fc64a630146f93a8819be30b9a
-  sha256:
+  md5: 475e7064759b754882cd6424ec2eb3fa
+  sha256: 4af128e5066a4aa1953b8b7104f37d6803b56ff2dff9066f0fd21681c5273da9
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://pypi.io/packages/source/t/tvb-data/{{ name }}-1.5.4.1.tar.gz
+  url: https://pypi.io/packages/source/t/tvb-data/{{ name }}-{{ version }}.tar.gz
 
 build:
   number: 0
