--- a/recipes/tvb-framework/meta.yaml
+++ b/recipes/tvb-framework/meta.yaml
@@ -1,15 +1,15 @@
 {% set name = 'tvb-framework' %}
-{% set version = '1.5.4' %}
+{% set version = '1.5.5' %}
 
 package:
   name: {{ name }}
   version: {{ version }}
 
 source:
-  md5: 393ab17c9a73188f88c95d4ba4b5cc3e
-  sha256:
+  md5: 3f501c3f43705440f8953bf24aa6b0e5
+  sha256: 81c6b293bff080f4b52ec2c9ece5a3e109c951eb9dd42b1d90aed00589d4828b
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://pypi.io/packages/source/t/tvb-framework/{{ name }}-1.5.4.2.tar.gz
+  url: https://pypi.io/packages/source/t/tvb-framework/{{ name }}-{{ version }}.tar.gz
 
 build:
   number: 0
