--- a/recipes/tvb-library/meta.yaml
+++ b/recipes/tvb-library/meta.yaml
@@ -1,15 +1,15 @@
 {% set name = 'tvb-library' %}
-{% set version = '1.5.4' %}
+{% set version = '1.5.5' %}
 
 package:
   name: {{ name }}
   version: {{ version }}
 
 source:
-  md5: a59efa09a559f3eaf4fbc579919f566c
-  sha256:
+  md5: ab372519fa5c86106804e89f93df37ea
+  sha256: a410550493222f834f07a33967359014778f0dd6464b9f329557a22f0f5aa5b7
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://pypi.io/packages/source/t/tvb-library/{{ name }}-1.5.4.1.tar.gz
+  url: https://pypi.io/packages/source/t/tvb-library/{{ name }}-{{ version }}.tar.gz
 
 build:
   number: 0
