Link towards the recent new Pypi package tvb-gdist (as credentials were lost for he previous gdist)

--- a/recipes/tvb-gdist/meta.yaml
+++ b/recipes/tvb-gdist/meta.yaml
@@ -1,15 +1,15 @@
-{% set name = 'gdist' %}
-{% set version = '1.0.4' %}
+{% set name = 'tvb-gdist' %}
+{% set version = '1.5.5' %}
 
 package:
   name: {{ name }}
   version: {{ version }}
 
 source:
-  md5: 98547eac8e7c0b5a7a600e12ae5c9c4c
-  sha256: 466ae588a1277d5b085d8caff86721f7c1ede717431341afdb44e99c00926d46
+  md5: c7635a564199d424de0a5a9b0335c133
+  sha256: f28c449d6f4f3337de2e63aba1fa7d30d84d35f7ad70a6aa7c2998ab46362a39
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://pypi.io/packages/source/g/gdist/{{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/t/tvb-gdist/{{ name }}-{{ version }}.tar.gz
 
 build:
   number: 0
