Fix revision number for tvb-library on Pypi

--- a/recipes/tvb-library/meta.yaml
+++ b/recipes/tvb-library/meta.yaml
@@ -6,10 +6,10 @@ package:
   version: {{ version }}
 
 source:
-  md5: ab372519fa5c86106804e89f93df37ea
-  sha256: a410550493222f834f07a33967359014778f0dd6464b9f329557a22f0f5aa5b7
+  md5: 389fcb5d83fe3f419aa65f9263c29cc9
+  sha256: 691811c51c29708c0aa55750202ad13f400b1ede0c30b436c619ab1fdaf11cd2
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://pypi.io/packages/source/t/tvb-library/{{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/t/tvb-library/{{ name }}-1.5.5.0.tar.gz
 
 build:
   number: 0
