Updated license info
Reflects upstream patch

--- a/recipes/macfsevents/meta.yaml
+++ b/recipes/macfsevents/meta.yaml
@@ -29,9 +29,9 @@ test:
 
 about:
   home: https://github.com/malthe/macfsevents
-  license: MIT
-  license_family: MIT
-  license_file: ''  # No license file provided in source repo
+  license: BSD-2-Clause
+  license_family: BSD
+  license_file: LICENSE.txt
   summary: Thread-based interface to file system observation primitives.
   description: "MacFSEvents is a Python library that provides thread-safe directory observation primitives using callbacks. It wraps the Mac OS X FSEvents API in a C-extension.
 
