--- a/recipes/patool/meta.yaml
+++ b/recipes/patool/meta.yaml
@@ -28,15 +28,16 @@ test:
   imports:
     - patoolib
     - patoolib.programs
+  commands:
+    - patool --help
 
 about:
   home: http://wummel.github.io/patool/
-  license: GPLv3
+  license: GPL-3.0
   license_family: GPL
   license_file: COPYING
   summary: 'portable archive file manager'
   dev_url: https://github.com/wummel/patool
-
 
 extra:
   recipe-maintainers:
