license file for aiofiles

--- a/recipes/aiofiles/meta.yaml
+++ b/recipes/aiofiles/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "aiofiles" %}
-{% set version = "0.3.1" %}
-{% set sha256 = "6c4936cea65175277183553dbc27d08b286a24ae5bd86f44fbe485dfcf77a14a" %}
+{% set version = "0.3.2" %}
+{% set sha256 = "852a493a877b73e11823bfd4e8e5ef2610d70d12c9eaed961bcd9124d8de8c10" %}
 
 package:
   name: {{ name|lower }}
@@ -33,7 +33,7 @@ about:
   home: https://github.com/Tinche/aiofiles
   summary: "File support for asyncio"
   license: Apache 2.0
-  # license_file: LICENSE
+  license_file: LICENSE
 
 extra:
   recipe-maintainers:
