After new fork for sqlalchemy-migrate has been published on pypi, we no longer need to depend on very old versions.

--- a/recipes/tvb-framework/meta.yaml
+++ b/recipes/tvb-framework/meta.yaml
@@ -37,8 +37,8 @@ requirements:
     - Pillow
     - psutil
     - simplejson
-    - sqlalchemy  0.7.8
-    - sqlalchemy-migrate  0.7.2
+    - sqlalchemy-migrate
+    - sqlalchemy
     - tvb-data
     - tvb-library
 
