added license_family for aiofiles and removed 1st1 from httptools maintainers

--- a/recipes/aiofiles/meta.yaml
+++ b/recipes/aiofiles/meta.yaml
@@ -34,6 +34,7 @@ about:
   summary: "File support for asyncio"
   license: Apache 2.0
   license_file: LICENSE
+  license_family: Apache
 
 extra:
   recipe-maintainers:
