--- a/recipes/gulp/meta.yaml
+++ b/recipes/gulp/meta.yaml
@@ -24,9 +24,11 @@ requirements:
     - nodejs
        
 test:
+  files:
+    - gulpfile.js
   commands:
     - npm list -g gulp
-    - npm link gulp && gulp --help
+    - npm link gulp && gulp
 
 about:
   home: https://github.com/gulpjs/gulp
