--- a/recipes/googlemaps/meta.yaml
+++ b/recipes/googlemaps/meta.yaml
@@ -30,9 +30,10 @@ test:
     - googlemaps
 
 about:
-  home: http://github.com/simplejson/simplejson
-  license: Apache 2
+  home: https://github.com/googlemaps/google-maps-services-python
+  license: Apache-2.0
   license_family: Apache
+  license_file: LICENSE.txt
   summary: 'Python Client for Google Maps Services'
 
   
