--- a/recipes/googlemaps/meta.yaml
+++ b/recipes/googlemaps/meta.yaml
@@ -33,7 +33,7 @@ about:
   home: https://github.com/googlemaps/google-maps-services-python
   license: Apache-2.0
   license_family: Apache
-  license_file: LICENSE.txt
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: 'Python Client for Google Maps Services'
 
   
