--- a/recipes/dask-ml/meta.yaml
+++ b/recipes/dask-ml/meta.yaml
@@ -28,7 +28,6 @@ requirements:
     - dask
     - dask-glm
     - dask-searchcv
-    - dask-xgboost
     - numpy >=1.11.*  # [py36]
     - numpy >=1.9.*  # [py27 or py35]
     - pandas
@@ -37,13 +36,12 @@ requirements:
     - scipy
     - setuptools
     - six
-    - xgboost
 
 test:
   imports:
     - dask_ml
     - dask_ml.utils
-    - dask_ml.xgboost
+    - dask_ml.cluster.k_means
 
 about:
   home: http://github.com/dask/dask-ml
