manually package license files

--- a/recipes/sanic/meta.yaml
+++ b/recipes/sanic/meta.yaml
@@ -36,8 +36,8 @@ about:
   home: https://github.com/channelcat/sanic
   summary: "Async Python 3.5+ web server that's written to go fast"
   license: MIT
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
 
 extra:
   recipe-maintainers:
-    - r0fls
     - kszucs
