--- a/recipes/ujson/meta.yaml
+++ b/recipes/ujson/meta.yaml
@@ -31,9 +31,8 @@ about:
   home: https://github.com/esnme/ultrajson
   summary: "Ultra fast JSON decoder and encoder written in C with Python bindings"
   license: BSD
-  # license_file: LICENSE.txt
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE.txt'
 
 extra:
   recipe-maintainers:
-    - Jahaja
     - kszucs
