vmprof: add libunwind as run time req

--- a/recipes/vmprof/meta.yaml
+++ b/recipes/vmprof/meta.yaml
@@ -31,6 +31,7 @@ requirements:
     - pytz
     - colorama
     - backports.shutil_which  # [py2k]
+    - libunwind  # [linux]
 
 test:
   imports:
@@ -44,6 +45,7 @@ test:
     - pytest
     - cffi
     - hypothesis
+    - toolchain
   source_files:
     - vmprof
     - src
