Updating version with license file on upstream

--- a/recipes/pyexcel-ezodf/meta.yaml
+++ b/recipes/pyexcel-ezodf/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "pyexcel-ezodf" %}
-{% set version = "0.3.3" %}
-{% set sha256 = "26ddddc61c6bbe2641a15964ba57eaf92a171478e7ed9efb9ae4db1567d0998c" %}
+{% set version = "0.3.4" %}
+{% set sha256 = "972eeea9b0e4bab60dfc5cdcb7378cc7ba5e070a0b7282746c0182c5de011ff1" %}
 
 package:
   name: {{ name|lower }}
@@ -9,7 +9,7 @@ package:
 source:
   fn: {{ name }}-{{ version }}.tar.gz
   # The github url is been used because the tar.gz from pypi is missing the CONTRIBUTORS.rst file
-  url: https://github.com/pyexcel/{{ name }}/archive/v{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
@@ -36,7 +36,7 @@ about:
   home: https://github.com/pyexcel/pyexcel-ezodf
   license: MIT
   license_family: MIT
-  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
+  license_file: LICENSE.txt
   summary: 'A Python package to create/manipulate OpenDocumentFormat files'
   description: |
     'ezodf is a Python package to create new or open existing' +
