--- a/recipes/pyexcel-io/meta.yaml
+++ b/recipes/pyexcel-io/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "pyexcel-io" %}
-{% set version = "0.5.1" %}
-{% set sha256 = "d6ba5cf8513a97a0d3632fbb42f4e77b48c7af9dee35e7d84ea329c92fe365e9" %}
+{% set version = "0.5.3" %}
+{% set sha256 = "8ae8c8aa4840a81513801e8f7586aa8428e6a0c855ac05b4b2e24141a2d918fa" %}
 
 package:
   name: {{ name|lower }}
@@ -39,7 +39,7 @@ about:
   home: https://github.com/pyexcel/pyexcel-io
   license: BSD-3-Clause
   license_family: BSD
-  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
+  license_file: LICENSE
   summary: 'One interface to read and write the data in various excel formats, import the data into and export the data from databases'
   description: |
    'A python library to read and write structured data in csv, zipped csv ' +
