--- a/recipes/pyexcel-ods3/meta.yaml
+++ b/recipes/pyexcel-ods3/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "pyexcel-ods3" %}
-{% set version = "0.5.0" %}
-{% set sha256 = "0163ea8d6c2d3bfdb52cf1c0c5fcc2fb9dce467547077558f7cd9df7c2797d57" %}
+{% set version = "0.5.2" %}
+{% set sha256 = "3414ca7393b81c53bce4d57a1ee56ab560b9656b5bc3dad6bec694f98bfab4ea" %}
 
 package:
   name: {{ name|lower }}
@@ -13,7 +13,7 @@ source:
 
 build:
   noarch: python
-  number: 1
+  number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
@@ -35,7 +35,7 @@ about:
   home: https://github.com/pyexcel/pyexcel-ods3
   license: BSD-3-Clause
   license_family: BSD
-  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
+  license_file: LICENSE
   summary: 'A wrapper library to read, manipulate and write data in xls using xlrd and xlwt'
   description: |
     'A wrapper library to read, manipulate and write data in ods format' +
