--- a/recipes/pyexcel-webio/meta.yaml
+++ b/recipes/pyexcel-webio/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "pyexcel-webio" %}
-{% set version = "0.1.2" %}
-{% set sha256 = "58f9a310dc3861360bc02e2246d5501dea48c342a77575dc09030d12f1406956" %}
+{% set version = "0.1.4" %}
+{% set sha256 = "039538f1b35351f1632891dde29ef4d7fba744e217678ebb5a501336e28ca265" %}
 
 package:
   name: {{ name|lower }}
@@ -13,7 +13,7 @@ source:
 
 build:
   noarch: python
-  number: 1
+  number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
@@ -23,7 +23,7 @@ requirements:
 
   run:
     - python
-    - pyexcel >=0.5.1
+    - pyexcel >=0.5.5
 
 test:
   imports:
@@ -33,7 +33,7 @@ about:
   home: https://github.com/pyexcel-webwares/pyexcel-webio
   license: BSD-3-Clause
   license_family: BSD
-  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
+  license_file: LICENSE
   summary: 'A generic request and response interface for pyexcel web extensions.'
   description: |
     'A generic request and response interface for pyexcel web extensions.' +
