--- a/recipes/pyexcel-xls/meta.yaml
+++ b/recipes/pyexcel-xls/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "pyexcel-xls" %}
-{% set version = "0.5.0" %}
-{% set sha256 = "a10e2600ec4aa4d699245e4a5835ccc32169132a503af3df564a782aa671667f" %}
+{% set version = "0.5.2" %}
+{% set sha256 = "13e347719f2b6e8b7494b4efd80cbcff4f229651a7ba5abffc59eebba245d10a" %}
 
 package:
   name: {{ name|lower }}
@@ -13,7 +13,7 @@ source:
 
 build:
   noarch: python
-  number: 1
+  number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
@@ -35,7 +35,7 @@ about:
   home: https://github.com/pyexcel/pyexcel-xls
   license: BSD-3-Clause
   license_family: BSD
-  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
+  license_file: LICENSE
   summary: 'A wrapper library to read, manipulate and write data in xls using xlrd and xlwt'
   description: |
     'A wrapper library to read, manipulate and write data in xls format. It' +
