--- a/recipes/pyexcel-xlsx/meta.yaml
+++ b/recipes/pyexcel-xlsx/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "pyexcel-xlsx" %}
-{% set version = "0.5.0.1" %}
-{% set sha256 = "13567b1490ce24b18958ffd3c466ce75616d4524c0357d14088d8157535b70bb" %}
+{% set version = "0.5.2" %}
+{% set sha256 = "b678c7a75c7d08e25419b9cb7e3f02a8eb77a041543ea712dd84c2d4bc8be18f" %}
 
 package:
   name: {{ name|lower }}
@@ -13,7 +13,7 @@ source:
 
 build:
   noarch: python
-  number: 1
+  number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
@@ -34,7 +34,7 @@ about:
   home: https://github.com/pyexcel/pyexcel-xlsx
   license: BSD-3-Clause
   license_family: BSD
-  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
+  license_file: LICENSE
   summary: 'A wrapper library to read, manipulate and write data in xlsx and xlsm format using openpyxl'
   description: |
     'A wrapper library to read, manipulate and write data in xlsx and xlsm ' +
