--- a/recipes/pyexcel/meta.yaml
+++ b/recipes/pyexcel/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "pyexcel" %}
-{% set version = "0.5.4" %}
-{% set sha256 = "c34627bc7df3c0657595237d74771b6bb600983ac6b0b4e8a6b4efb86517e682" %}
+{% set version = "0.5.6" %}
+{% set sha256 = "35fb03b3102233aab4ef3bf9367e6f6924e3a5df2098054a88d9615e2938ca31" %}
 
 package:
   name: {{ name|lower }}
@@ -44,7 +44,7 @@ about:
   home: https://github.com/pyexcel/pyexcel
   license: BSD-3-Clause
   license_family: BSD
-  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
+  license_file: LICENSE
   summary: 'Single API for reading, manipulating and writing data in csv, ods, xls, xlsx and xlsm files'
   description: |
     'A wrapper library that provides one API to read, manipulate and write ' +
