Skip Windows [skip appveyor]

--- a/recipes/spiceypy/meta.yaml
+++ b/recipes/spiceypy/meta.yaml
@@ -16,6 +16,7 @@ source:
 
 build:
   number: 0
+  skip: true  # [win]
   noarch_python: True
 
   script: python setup.py install --single-version-externally-managed --record record.txt
