--- a/recipes/pyweed/meta.yaml
+++ b/recipes/pyweed/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "pyweed" %}
-{% set version = "0.5.0" %}
-{% set sha256 = "fa34ef33451cac10f475f99d8fbae816d0a7a16442635e255efb5f9b48b6b068" %}
+{% set version = "0.5.2.dev0" %}
+{% set sha256 = "3e1e8e35cba3f09a52a540b4351042d9e62a98bc430d7f70315df621fb2177f1" %}
 
 package:
   name: {{ name }}
