Add entry points for radon and xenon

--- a/recipes/radon/meta.yaml
+++ b/recipes/radon/meta.yaml
@@ -16,6 +16,8 @@ build:
   noarch: python
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
+  entry_points:
+    - radon = radon:main
 
 requirements:
   build:
@@ -29,6 +31,8 @@ requirements:
 
 test:
   imports:
+    - radon
+  commands:
     - radon
 
 about:
