--- a/recipes/xenon/meta.yaml
+++ b/recipes/xenon/meta.yaml
@@ -16,6 +16,8 @@ build:
   noarch: python
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
+  entry_points:
+    - xenon = xenon:main
 
 requirements:
   build:
@@ -30,6 +32,8 @@ requirements:
 test:
   imports:
     - xenon
+    commands:
+    - xenon -v
 
 about:
   home: https://github.com/rubik/xenon
