--- a/recipes/patool/meta.yaml
+++ b/recipes/patool/meta.yaml
@@ -13,7 +13,8 @@ source:
 
 build:
   number: 0
-  skip: True  # [win]
+  noarch: python
+  script: python setup.py install --single-version-externally-managed --record record.txt && chmod u+x $PREFIX/bin/patool
   
 requirements:
   build:
