--- a/recipes/patool/meta.yaml
+++ b/recipes/patool/meta.yaml
@@ -14,7 +14,7 @@ source:
 build:
   number: 0
   noarch: python
-  script: python setup.py install --single-version-externally-managed --record record.txt && chmod u+x $PREFIX/bin/patool
+  script: python setup.py install --single-version-externally-managed --record record.txt && chmod u+x $PREFIX/bin/patool && echo HERE IS PATOOL && head $PREFIX/bin/patool && echo END OF PATOOL
   
 requirements:
   build:
