WIP added debug prints

--- a/recipes/patool/meta.yaml
+++ b/recipes/patool/meta.yaml
@@ -28,6 +28,10 @@ test:
     - patoolib
     - patoolib.programs
   commands:
+    - echo here is patool test
+    - cat $PREFIX/bin/patool
+    - echo end of patool test
+    - python patool --help
     - patool --help
 
 about:
