limit openmp to linux

--- a/recipes/valgrind/meta.yaml
+++ b/recipes/valgrind/meta.yaml
@@ -22,11 +22,11 @@ requirements:
     - perl 5.22*
     - boost 1.65.1
     - zlib 1.2.8
-    - openmp
+    - openmp  # [linux]
   run:
     - boost 1.65.1
     - zlib 1.2.8
-    - openmp
+    - openmp  # [linux]
 
 test:
   commands:
