--- a/recipes/pymvpa2/meta.yaml
+++ b/recipes/pymvpa2/meta.yaml
@@ -1,14 +1,6 @@
-# Use
-# python -c 'from jinja2 import Template; print(Template(open("meta.yaml").read()).render())'
-# to see templating interpolated
 {% set name = "pymvpa2" %}
 {% set version = "2.6.1" %}
 {% set sha256 = "206fa302fc6292831c50d6ffe9b1a95fc048380b0701c140eb7300dcd017052a" %}
-# Common dependencies between run and build (Yarik hates duplication)
-{% set common_deps = "
-    - python
-    - numpy \
-" %}
 
 package:
   name: {{ name|lower }}
@@ -26,15 +18,21 @@ build:
   # TODO: entry_points -- well, we have scripts
 
 requirements:
-  build: {{common_deps}}
+  build:
+    - python
     - setuptools
     - swig
     - toolchain
-  run: {{common_deps}}
+    - numpy 1.9.*  # [not (win and py36)]
+    - numpy 1.11.*  # [win and py36]
+  run:
+    - python
     - h5py
     - joblib
     - matplotlib
     - nibabel
+    - numpy >=1.9  # [not (win and py36)]
+    - numpy >=1.11  # [win and py36]
     - scikit-learn
     - scipy
     - statsmodels
@@ -56,13 +54,9 @@ about:
   home: http://pymvpa.org
   license: MIT
   license_family: MIT
-  # It is strongly encouraged to include a license file in the package,
-  # (even if the license doesn't require it) using the license_file entry.
-  # See http://conda.pydata.org/docs/building/meta-yaml.html#license-file
   license_file: COPYING
   summary: 'Python multivariate pattern analysis framework'
 
-  # The remaining entries in this section are optional, but recommended
   description: |
     PyMVPA eases pattern classification analyses of large datasets, with an
     accent on neuroimaging. It provides high-level abstraction of typical
