FIX: add fontconfig

--- a/recipes/vispy/meta.yaml
+++ b/recipes/vispy/meta.yaml
@@ -18,10 +18,12 @@ requirements:
     - python
     - setuptools
     - numpy
+    - fontconfig  # [unix]
 
   run:
     - python
     - numpy
+    - fontconfig  # [unix]
 
 test:
   imports:
