--- a/recipes/vispy/meta.yaml
+++ b/recipes/vispy/meta.yaml
@@ -8,6 +8,8 @@ source:
   fn: vispy-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/v/vispy/vispy-{{ version }}.tar.gz
   sha256: fa24f925ec5998d3d68cc96bae0fe438082b78a4e198ba928dfa5b35b283c19e
+  patches:
+    - ctypes_fontconfig.diff
 
 build:
   number: 0
