--- a/recipes/pyautogui/meta.yaml
+++ b/recipes/pyautogui/meta.yaml
@@ -31,7 +31,9 @@ requirements:
 
 test:
   imports:
-    - pyautogui
+    - pyautogui  # [not linux]
+  commands:
+    - DISPLAY=localhost:1.0 xvfb-run python -c "import pyautogui"  # [linux]
 
 about:
   home: https://github.com/asweigart/pyautogui
