--- a/recipes/vispy/meta.yaml
+++ b/recipes/vispy/meta.yaml
@@ -14,17 +14,22 @@ source:
 build:
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
+  skip: true  # [osx]
 
 requirements:
   build:
     - python
     - setuptools
-    - numpy
+    - numpy 1.8.*  # [not (win and (py35 or py36))]
+    - numpy 1.9.*  # [win and py35]
+    - numpy 1.11.*  # [win and py36]
     - fontconfig  # [unix]
 
   run:
     - python
-    - numpy
+    - numpy >=1.8  # [not (win and (py35 or py36))]
+    - numpy >=1.9  # [win and py35]
+    - numpy >=1.11  # [win and py36]
     - fontconfig  # [unix]
 
 test:
