ENH respond to CR

--- a/recipes/mysql/meta.yaml
+++ b/recipes/mysql/meta.yaml
@@ -22,17 +22,16 @@ requirements:
     - toolchain
     - cmake
 
-  run:
-
 test:
   commands:
     - mysql_config --version
     - my_print_defaults --version
     - mysqld --help --verbose
+    - mysql.server --help
 
 about:
   home: https://www.mysql.com/
-  license: GPL
+  license: GPL-2.0
   license_family: GPL
   license_file: COPYING
   summary: 'Open source relational database management system.'
