TST make sure tests for mysql.server work

--- a/recipes/mysql/meta.yaml
+++ b/recipes/mysql/meta.yaml
@@ -27,7 +27,7 @@ test:
     - mysql_config --version
     - my_print_defaults --version
     - mysqld --help --verbose
-    - mysql.server --help
+    - command -v mysql.server
 
 about:
   home: https://www.mysql.com/
