--- a/recipes/uavro/meta.yaml
+++ b/recipes/uavro/meta.yaml
@@ -21,7 +21,7 @@ requirements:
     - setuptools
     - cython
     - numpy
-    - msinttypes [win]
+    - msinttypes  # [win]
   run:
     - python
     - pandas
