updated license filename.
In this package, license name is LICENCE, not LICENSE

--- a/recipes/jstz/meta.yaml
+++ b/recipes/jstz/meta.yaml
@@ -30,7 +30,7 @@ about:
   home: https://github.com/iansinnott/jstz
   license: MIT
   license_family: MIT
-  license_file: LICENSE
+  license_file: LICENCE
   summary: 'Timezone detection for JavaScript'
   description: |
     This library allows you to detect a user's timezone from within their browser. 
