updated the license file path

--- a/recipes/js-cookie/meta.yaml
+++ b/recipes/js-cookie/meta.yaml
@@ -30,7 +30,7 @@ about:
   home: https://github.com/js-cookie/js-cookie
   license: MIT
   license_family: MIT
-  license_file: LICENSE
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: 'A simple, lightweight JavaScript API for handling browser cookies'
   description: |
     A simple, lightweight JavaScript API for handling browser cookies  
