--- a/recipes/bootstrap/meta.yaml
+++ b/recipes/bootstrap/meta.yaml
@@ -7,21 +7,24 @@ package:
   version: {{ version }}
 
 source:
-  url: https://github.com/twbs/bootstrap/archive/v3.3.7.tar.gz
+  url: https://github.com/twbs/{{ name }}/archive/v{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
   number: 0
-  noarch: True
+  noarch: generic
+  npm install -g .
 
 requirements:
   build:
-    - python
-  run:
-    - python
+    - nodejs
+  
     
 test:
-  imports:
+  commands:
+    - npm list -g bootstrap
+  requires:
+    - nodejs
    
 
 about:
