--- a/recipes/foundation-sites/meta.yaml
+++ b/recipes/foundation-sites/meta.yaml
@@ -7,23 +7,24 @@ package:
   version: {{ version }}
 
 source:
-  url: https://github.com/zurb/foundation-sites/archive/v6.4.2.tar.gz
+  url: https://github.com/zurb/{{ name }}/archive/v{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
   number: 0
+  script: npm install -g .
+  noarch: generic
 
 requirements:
   build:
-    - python
-  run:
-    - python
+    - nodejs
     
 test:
   commands:
     - npm list -g foundation-sites
+  requires:
+    - nodejs
    
-
 about:
   home: https://github.com/zurb/foundation-sites
   license: MIT
