--- a/recipes/uavro/meta.yaml
+++ b/recipes/uavro/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "uavro" %}
-{% set version = "0.0.2" %}
-{% set sha256 = "0d6b6b55527cf23f41ff20314c9841829781d817847e869446729a85adf263af" %}
+{% set version = "0.0.3" %}
+{% set sha256 = "99ab5fc2e3789e0b2bc1badddd1f9d4c6f62ebe4a3b3bbbb976edbea9d853e92" %}
 
 package:
   name: {{ name|lower }}
@@ -20,8 +20,9 @@ requirements:
     - python
     - setuptools
     - cython
-    - numpy
+    - numpy 1.11.*
     - msinttypes  # [win]
+    - toolchain
   run:
     - python
     - pandas
@@ -35,6 +36,7 @@ about:
   home: https://github.com/martindurant/uavro
   license: MIT
   license_family: MIT
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE.txt'
   summary: 'Very fast avro file to dataframe reader'
 
 extra:
