--- a/recipes/xtensor-fftw/meta.yaml
+++ b/recipes/xtensor-fftw/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "xtensor-fftw" %}
-{% set version = "0.1.0" %}
-{% set sha256 = "14fd38ea602360729ec5c5cfe11ba1c157470ece421cf30baff892dedbbb2045" %}
+{% set version = "0.1.1" %}
+{% set sha256 = "0a41297505bdce333bb4a9a6d2ab79aee05af0e1f78aac0ab0a5cb066bc15577" %}
 
 package:
   name: {{ name|lower }}
@@ -22,10 +22,10 @@ requirements:
     - toolchain
     - cmake
   run:
-    - xtl >= 0.3
-    - xtensor >= 0.13.0
-    - cmake >= 3.1.3
-    - fftw >= 3.0
+    - xtensor >=0.12.1
+    - xtl >=0.2.8,<0.3
+    - fftw >=3.0
+    - cmake >=3.1.3
 
 test:
   commands:
