added finder patch to libedit [skip appveyor]

--- a/recipes/libedit/meta.yaml
+++ b/recipes/libedit/meta.yaml
@@ -11,6 +11,9 @@ source:
   fn: {{ name }}-{{ date }}-{{ version }}.tar.gz
   url: http://thrysoee.dk/editline/{{ name }}-{{ date }}-{{ version }}.tar.gz
   sha256: {{ sha256 }}
+  patches:
+    - 0001-Also-look-in-libtinfo-for-tgetent.patch
+
 
 build:
   number: 0
