pin perl 5.22.0.1 [skip appveyor]

--- a/recipes/libedit/meta.yaml
+++ b/recipes/libedit/meta.yaml
@@ -25,7 +25,7 @@ requirements:
     - automake
     - autoconf
     - m4
-    - perl
+    - perl 5.22.0.1
     - ncurses 5.9
   run:
     - ncurses 5.9
