Updated version, fixed some issues raised in PR review

--- a/recipes/pyweed/meta.yaml
+++ b/recipes/pyweed/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "pyweed" %}
-{% set version = "0.5.2.dev0" %}
-{% set sha256 = "3e1e8e35cba3f09a52a540b4351042d9e62a98bc430d7f70315df621fb2177f1" %}
+{% set version = "0.5.2.dev1" %}
+{% set sha256 = "c1173408d2fd1f556152e5d72501146ed4e9e3a4a00e7ef4896e50be81393121" %}
 
 package:
   name: {{ name }}
@@ -14,6 +14,8 @@ build:
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
   skip: True  # [py2k]
+  entry_points:
+    - pyweed = pyweed.pyweed_launcher:launch
 
 requirements:
   build:
@@ -27,15 +29,17 @@ requirements:
     - basemap
     - pyproj
     - pillow
-    - mock  # [py2k]
 
 test:
   imports:
     - pyweed
+  commands:
+    - python -m pyweed.tests
 
 about:
   home: https://iris-edu.github.io/pyweed/
-  license: LGPLv3
+  dev_url: https://github.com/iris-edu/pyweed
+  license: LGPL-3.0
   license_file: LICENSE
   summary: "PyWEED: A cross-platform app for retrieving event-based seismic data."
 
