--- a/recipes/cyan/meta.yaml
+++ b/recipes/cyan/meta.yaml
@@ -22,7 +22,7 @@ source:
 build:
   number: 0
   script: chmod 755 cyan && cp cyan ${PREFIX}/bin  # [unix]
-  script: copy cyan.exe %PREFIX%\\bin\\cyan.exe  # [win]
+  script: copy %SRC_DIR%\\cyan.exe %PREFIX%\\bin\\cyan.exe  # [win]
 
 test:
   commands:
