Update build requirements, license

--- a/recipes/pycwt/meta.yaml
+++ b/recipes/pycwt/meta.yaml
@@ -20,9 +20,6 @@ requirements:
   build:
     - python
     - setuptools
-    - numpy
-    - scipy
-    - tqdm
   run:
     - python
     - numpy
@@ -36,7 +33,7 @@ test:
 
 about:
   home: https://github.com/regeirk/pycwt
-  license: BSD3
+  license: BSD-3-clause
   license_family: BSD
   license_file: LICENSE.txt
   summary: 'A Python module for continuous wavelet spectral analysis'
