--- a/recipes/cyan/meta.yaml
+++ b/recipes/cyan/meta.yaml
@@ -24,6 +24,7 @@ build:
   script: chmod 755 cyan && cp cyan ${PREFIX}/bin  # [unix]
   script: |  # [win]
     dir %SRC_DIR%  # [win]
+    mkdir %PREFIX%\\bin  # [win]
     copy %SRC_DIR%\cyan.exe %PREFIX%\\bin\\cyan.exe  # [win]
 
 test:
