Edit after feedback

--- a/recipes/spiceypy/meta.yaml
+++ b/recipes/spiceypy/meta.yaml
@@ -1,14 +1,14 @@
 {% set name = "spiceypy" %}
 {% set version = "2.0.0" %}
-{% set sha256 = "33db27531f7e8e31ce06970231b3265fe043b608d1404c9f43b2af14508713f3" %}
+{% set sha256 = "442526ef2921b5214aa4f33bb05515ef70d268a18fa8015c9dd90c63767d04e6" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  fn: v{{ version }}.zip
-  url: https://github.com/AndrewAnnex/SpiceyPy/archive/v{{ version }}.zip
+  fn: {{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
   patches:
@@ -33,12 +33,13 @@ requirements:
 
 test:
   imports:
-    - "spiceypy"
-    - "spiceypy.utils"
+    - spiceypy
+    - spiceypy.utils
 
 about:
   home: https://github.com/AndrewAnnex/SpiceyPy
   license: MIT
+  license_file: LICENSE
   summary: 'The NASA JPL NAIF SPICE toolkit wrapper written in Python'
 
   description:
