--- a/recipes/loompy/meta.yaml
+++ b/recipes/loompy/meta.yaml
@@ -31,11 +31,10 @@ requirements:
 test:
   imports:
     - loompy
-    - simplejson.tests
 
 about:
   home: https://github.com/linnarsson-lab/loompy
-  license: BSD
+  license: BSD-2-Clause
   license_family: BSD
   license_file: LICENSE
   summary: 'Work with .loom files for single-cell RNA-seq data'
