--- a/recipes/loompy/meta.yaml
+++ b/recipes/loompy/meta.yaml
@@ -13,7 +13,7 @@ source:
 
 build:
   number: 0
-  skip: True  # [py<36]
+  skip: True  # [not py36]
   skip: True  # [win]
   script: python setup.py install --single-version-externally-managed --record record.txt
 
