Add license, and comment referring to issue raised upstream

--- a/recipes/loompy/meta.yaml
+++ b/recipes/loompy/meta.yaml
@@ -32,11 +32,12 @@ test:
   imports:
     - loompy
 
+
 about:
   home: https://github.com/linnarsson-lab/loompy
   license: BSD-2-Clause
   license_family: BSD
-  license_file: LICENSE
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'  # https://github.com/conda-forge/staged-recipes/issues/4277
   summary: 'Work with .loom files for single-cell RNA-seq data'
   doc_url: http://loompy.org
   dev_url: https://github.com/linnarsson-lab/loompy
