Update source URL again

--- a/recipes/datashader/meta.yaml
+++ b/recipes/datashader/meta.yaml
@@ -8,7 +8,7 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://github.com/bokeh/{{ name[0] }}/archive/{{ version }}.tar.gz
+  url: https://github.com/bokeh/{{ name }}/archive/{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
