Swap license and license_family

--- a/recipes/fasttext/meta.yaml
+++ b/recipes/fasttext/meta.yaml
@@ -28,8 +28,8 @@ test:
 
 about:
   home: https://fasttext.cc/
-  license: BSD
-  license_family: BSD-3-Clause
+  license: BSD-3-Clause
+  license_family: BSD
   license_file: LICENSE
   summary: 'fastText - Library for efficient text classification and representation learning'
   dev_url: https://github.com/facebookresearch/fastText
