Improve maintainability and try workaround for test

--- a/recipes/fasttext/meta.yaml
+++ b/recipes/fasttext/meta.yaml
@@ -1,5 +1,6 @@
 {% set name = "fasttext" %}
 {% set version = "0.1.0" %}
+{% set release_name = "431c9e2" %}
 {% set sha256 = "8c4ba14372d160fe7de902299caac664b7c1af1778601e17ca18ca2081b0e253" %}
 
 package:
@@ -7,8 +8,8 @@ package:
   version: {{ version }}
 
 source:
-  fn: 431c9e2.tar.gz
-  url: https://github.com/facebookresearch/fastText/archive/431c9e2.tar.gz
+  fn: {{ name }}-{{ version }}.tar.gz
+  url: https://github.com/facebookresearch/fastText/archive/{{ release_name }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
@@ -17,14 +18,11 @@ build:
 
 requirements:
   build:
-    - gcc   # [linux]
-    - llvm  # [osx]
-  run:
-    - libgcc    # [linux]
+    - toolchain
 
 test:
   commands:
-    - fasttext supervised -h
+    - fasttext supervised -h || [[ $? == 1 ]]  # -h returns 1
 
 about:
   home: https://fasttext.cc/
@@ -33,6 +31,7 @@ about:
   license_file: LICENSE
   summary: 'fastText - Library for efficient text classification and representation learning'
   dev_url: https://github.com/facebookresearch/fastText
+  doc_url: https://fasttext.cc/docs/en/support.html
   license: BSD-3-Clause
 
 extra:
