--- a/recipes/hips/meta.yaml
+++ b/recipes/hips/meta.yaml
@@ -22,9 +22,9 @@ requirements:
     - setuptools
   run:
     - python
-    - numpy>=1.11
-    - astropy>=1.3
-    - astropy-healpix>=0.2
+    - numpy >=1.11
+    - astropy >=1.3
+    - astropy-healpix >=0.2
     - scikit-image
     - Pillow
 
@@ -51,6 +51,7 @@ about:
 
 extra:
   recipe-maintainers:
+    - cdeil
     - tboch
     - adl1995
     - mwcraig
