Fix typo in pillow package

--- a/recipes/hips/meta.yaml
+++ b/recipes/hips/meta.yaml
@@ -26,7 +26,7 @@ requirements:
     - astropy >=1.3
     - astropy-healpix >=0.2
     - scikit-image
-    - Pillow
+    - pillow
 
 test:
   imports:
