--- a/recipes/hips/meta.yaml
+++ b/recipes/hips/meta.yaml
@@ -14,7 +14,7 @@ source:
 build:
   number: 0
   script: python setup.py install --offline --single-version-externally-managed --record record.txt
-  skip: True  # [py<36]"
+  skip: True  # [py<36]
 
 requirements:
   build:
