Avoid explicit version number in source url

--- a/recipes/jags/meta.yaml
+++ b/recipes/jags/meta.yaml
@@ -8,7 +8,7 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://sourceforge.mirrorservice.org/m/mc/mcmc-jags/JAGS/4.x/Source/{{ name }}-{{ version }}.tar.gz
+  url: https://sourceforge.mirrorservice.org/m/mc/mcmc-jags/JAGS/{{ version[0] }}.x/Source/{{ name }}-{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
